OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Default_Vendor_Program__mdt/Onboarding_Default_Vendor_Program__mdt.object-meta.xml
<CustomObject>
    <description>Maps flow scenarios (e.g., REQUIRE_NDA) to default Vendor Programs when no vendor selection is made. Used when the BRE returns REQUIRE_NDA and the user has no onboarding records.</description>
    <label>Onboarding Default Vendor Program</label>
    <pluralLabel>Onboarding Default Vendor Programs</pluralLabel>
</CustomObject>