OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Default_Vendor_Program__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active records are used. Inactive records are ignored.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>