OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Default_Vendor_Program__mdt/fields/Scenario_Key__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Key__c</fullName>
    <description>Scenario identifier from the BRE (e.g., REQUIRE_NDA, PROMPT_PATH_SELECTION). Must match FinalNextAction from OnboardingOrchestrator.</description>
    <inlineHelpText>Use REQUIRE_NDA when no onboarding records exist and the flow should default to the gate NDA.</inlineHelpText>
    <label>Scenario Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>