OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Default_Vendor_Program__mdt/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Name of the Vendor__c record. The first active Vendor_Customization__c for this vendor is used as the default program.</description>
    <inlineHelpText>e.g., Perfect Vision for the gate NDA, or NDA for a generic NDA vendor.</inlineHelpText>
    <label>Vendor Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>