OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Default_Vendor_Program__mdt/fields/Vendor_Program_Name_Contains__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Name_Contains__c</fullName>
    <description>Optional. When set, filters Vendor Programs by Name containing this value (case-insensitive). Use to match "NDA", "PerfectVision NDA", etc. without exact name match.</description>
    <inlineHelpText>e.g., NDA - matches any Vendor Program whose name contains "NDA".</inlineHelpText>
    <label>Vendor Program Name Contains</label>
    <length>80</length>
    <type>Text</type>
</CustomField>